[package]
name = "bytom-rust-sdk"
version = "0.1.0"
authors = ["ruster-cn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
serde = {version="1.0.104",features = ["derive"] }
serde_json = "1.0.44"
tokio = {version="0.2.9",features = ["full"] }
futures = "0.3.3"
quick-error = "1.2.3"



[dev-dependencies]

[workspace]
members = [
    "example"
]