[package]
name = "bytom-rust-sdk"
version = "0.1.0"
authors = ["ruster-cn <tutotu.yang@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/ruster-cn/bytom-rust-sdk"
homepage = "https://crates.io/crates/bytom-rust-sdk"
documentation = "https://docs.rs/bytom-rust-sdk"
description = "Bytom Rust SDK"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
serde = {version="1.0.104",features = ["derive"] }
serde_json = "1.0.44"
tokio = {version="0.2.9",features = ["full"] }
futures = "0.3.3"
quick-error = "1.2.3"
http = "0.2.0"


[dev-dependencies]

[workspace]
members = [
    "example"
]
