[package]
name = "cmd"
version = "0.1.0"
authors = ["ruster-cn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="0.2.9",features = ["full"] }
bytom-rust-sdk = {path = "../",default-features = false}
tokio-async-await = "0.1.0"
serde_json = "1.0.44"